syntax = "proto3";

package room;

import "github.com/jinbanglin/micro/message/message.proto";

//CreateRoom
//duration:room time expire
/*
10000{ "duration":1800 }
*/
message CreateRoomReq {
    int64 duration = 1;
}

message CreateRoomRsp {
    msg.Message message = 1;
    string room_id = 2;
}

//EntryRoom
//you could neet a api to query user info
/*
10001{ "room_id":"room id" }
*/
message EntryRoomReq {
    string room_id = 1;
}

message EntryRoomRsp {
    msg.Message message = 1;
    repeated string user_id = 2;
}

//hello example
/*
10002{ "hello":"hello","room_id":"1544500340.bg7j8t09htllf87418d0" }
*/
message HelloReq {
    string hello = 1;
    string room_id = 2;
}

message HelloRsp {
    msg.Message message = 1;
    string world = 2;
}

//exit room
/*
10004{"room_id":"1544500340.bg7j8t09htllf87418d0"}
*/
message ExitRoomReq {
    string room_id = 1;
}

message ExitRoomRsp {
    msg.Message message = 1;
}

//protoc --proto_path=${GOPATH}/src:. --gogofast_out=plugins=micro:. *.proto